@@ -1,3 +1,4 @@
+Hide slider for mystery objects
 Split apart control panel into laser view and tools
 Fixed: protractor intercepts mouse events when invisible
 Added MediumControlPanel
